// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|NoData custom 1`] = `
<div
  className="sc-gipzik oZzpl"
>
  No Projects
</div>
`;

exports[`Storyshots Shared Components|NoData default 1`] = `
<div
  className="sc-gipzik oZzpl"
>
  <span>
    No Data Found.
  </span>
</div>
`;
